message CInput
{
    required bool key_up = 1;
    required bool key_down = 2;
    required bool key_left = 3;
    required bool key_right = 4;
}

message CPosition
{
    required sint32 x = 1;
    required sint32 y = 2;
    required sint32 z = 3;
}

message CSpeed
{
    required int32 value = 1 [default = 5];
}

message CDrawable
{
	optional string image_name = 1;
	optional int32 width = 2;
	optional int32 height = 3;
    optional int32 color = 4;
	required Type type = 5;

    enum Type
    {
        RECTANGLE = 1;
        IMAGE = 2;
    }
}